sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:8: error: ')' expected but ',' found.
  for (i <- 0 to b-2, -1) {
                    ^AlgBubbleSort2:17: error: illegal start of simple expression
} 
^